# PDF-outline-adder

./: .gitignore  PDF_outline_add.py  README.md  main.py  pyproject.toml
scr/: main.py  outline_model.py
tests/: test_parser.py
